@@ -219,7 +219,7 @@ public class EditMerge {
             couldExpand = thisCharCursor.goRight((short) 1, true);
             String thisChar = thisCharCursor.getString();
             thisCharCursor.collapseToEnd();
-            if (thisChar.isEmpty() || "\n".equals(thisChar) || !thisChar.trim().isEmpty()) {
+            if (thisChar.isEmpty() || "\n".equals(thisChar) || !thisChar.isBlank()) {
                 couldExpand = false;
                 if (!thisChar.isEmpty()) {
                     thisCharCursor.goLeft((short) 1, false);
@@ -231,7 +231,7 @@ public class EditMerge {
 
             // These two should move in sync:
             if (UnoTextRange.compareEnds(state.cursorBetween, state.currentGroupCursor) != 0) {
-                LOGGER.warn(loggerMessage + " (during expand)");
+                LOGGER.warn("{} (during expand)", loggerMessage);
                 return false;
             }
         }
